@@ -4,8 +4,9 @@ QXmpp 0.7.2 (Unreleased)
   - Handle Error replies in QXmppDiscoveryManager so that library users can know
     about errors.
   - If building with Qt 5, use Qt's QDnsLookup instead of our backport.
-  - Improve MUC scritability:
+  - Improve MUC scriptability:
     * Add QXmppMucRoom::ban() to ban users.
+    * Add QXmppMucRoom::name() to get the room's human-readable name.
     * Add QXmppMucRoom::participantFullJid() to lookup an occupant full JID.
 
 QXmpp 0.7.1 (Sep 3, 2012)
